objects/TestDrive__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who requested the test drive</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TestDrives</relationshipLabel>
        <relationshipName>TestDrives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FVehicles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vehicle used for test drive</description>
        <label>FVehicles</label>
        <referenceTo>FVehicles__c</referenceTo>
        <relationshipLabel>TestDrives</relationshipLabel>
        <relationshipName>TestDrives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned salesperson</description>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TestDrives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TestDrive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>FVehicles__c</columns>
        <columns>Status__c</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recent_Items</fullName>
        <columns>NAME</columns>
        <columns>FVehicles__c</columns>
        <columns>Customer__c</columns>
        <columns>Status__c</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Mine</filterScope>
        <label>Recent Items</label>
    </listViews>
    <nameField>
        <label>TestDrive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestDrives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>